# lora-finetune-toolkit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
configs/: llama3_8b.yaml  mistral_7b.yaml  qwen3_8b.yaml
data/examples/: qwen3_finetune_paper_lab_500.json  qwen3_finetune_paper_lab_500.jsonl
examples/: train_qwen.sh
scripts/: convert_jsonl_to_training_json.py  inference.py  train.py  train_qwen_background.sh  train_qwen_paper_lab_background.sh
src/: __init__.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  base.py  llama.py  mistral.py  qwen.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  config.py
