[project]
name = "lora-finetune-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0,<5.0.0",
    "peft>=0.8.0",
    "trl>=0.7.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "pyyaml>=6.0",
]
